Updating Config and readme

--- a/YANG/config-xmi2yang.json
+++ b/YANG/config-xmi2yang.json
@@ -2,9 +2,19 @@
   "tapi":{
     "namespace":"urn:onf:otcc:yang:",
     "organization":"ONF OTCC (Open Transport Configuration & Control) Project",
-    "contact":"\r\n Project Web: <https://wiki.opennetworking.org/display/OTCC/TAPI>\r\n Project List: <mailto:transport-api@opennetworking.org>\r\n Editor: Karthik Sethuraman\r\n         <mailto:karthik.sethuraman@necam.com>",
+    "contact":"\r\n Project Web: <https://wiki.opennetworking.org/display/OTCC/TAPI>\r\n Project List: <mailto:transport-api@opennetworking.org>\r\n Editor: Karthik Sethuraman <mailto:karthik.sethuraman@necam.com>\r\n Andrea Mazzin <mailto:andrea.mazzini@nokia.com>\r\n Arturo Mayoral <mailto:arturo.mayoral@telefonica.com>\r\n Nigel Davis <mailto:ndavis@ciena.com>",
     "withSuffix":false,
     "revision": [
+        {
+	      "date":"2020-04-23",
+	      "description":"ONF Transport API version 2.1.3.\r\n  - The TAPI YANG models included in this TAPI release (v2.1.3) are a *normative* part of the TAPI SDK.\r\n  - The YANG specifications have been generated from the corresponding UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n   <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\n   and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\r\n   <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\r\n  - Status of YANG model artifacts can be determined by referring to the corresponding UML artifacts.\r\n   As described in the UML models, some artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\n  - The ONF TAPI release process does not guarantee backward compatibility of YANG models across major versions of TAPI releases.\r\n   The YANG model backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\n   YANG models included in this release are not backward compatible with previous TAPI releases.\r\n  - Changes included in this TAPI release (v2.1.3) are listed in\r\n   <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop_v2_1/CHANGE_LOG/change-log.2.1.3.md>",
+	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 7950, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/v2.1.0/UML>"
+	    },
+        {
+	      "date":"2019-07-16",
+	      "description":"ONF Transport API version 2.1.2.\r\n  - The TAPI YANG models included in this TAPI release (v2.1.2) are a *normative* part of the TAPI SDK.\r\n  - The YANG specifications have been generated from the corresponding UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n   <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\n   and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\r\n   <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\r\n  - Status of YANG model artifacts can be determined by referring to the corresponding UML artifacts.\r\n   As described in the UML models, some artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\n  - The ONF TAPI release process does not guarantee backward compatibility of YANG models across major versions of TAPI releases.\r\n   The YANG model backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\n   YANG models included in this release are not backward compatible with previous TAPI releases.\r\n  - Changes included in this TAPI release (v2.1.2) are listed in\r\n   <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop_v2_1/CHANGE_LOG/change-log.2.1.2.md>",
+	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 7950, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/v2.1.0/UML>"
+	    },
         {
 	      "date":"2018-12-10",
 	      "description":"ONF Transport API version 2.1.1.\r\n  - The TAPI YANG models included in this TAPI release (v2.1.1) are a *normative* part of the TAPI SDK.\r\n  - The YANG specifications have been generated from the corresponding UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n   <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\n   and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\r\n   <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\n  - Status of YANG model artifacts can be determined by referring to the corresponding UML artifacts.\r\n   As described in the UML models, some artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\n  - The ONF TAPI release process does not guarantee backward compatibility of YANG models across major versions of TAPI releases.\r\n   The YANG model backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\n   YANG models included in this release are not backward compatible with previous TAPI releases.\r\n  - Changes included in this TAPI release (v2.1.1) are listed in\r\n   <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.1.1.md>",
@@ -38,6 +48,11 @@
       "tapi-path-computation":"pat",
       "tapi-virtual-network":"vnw",
       "tapi-notification":"not",
+      "tapi-equipment":"equ",
+      "tapi-streaming":"str",
+      "tapi-dsr":"dsr",
+      "tapi-photonic-media":"pho",
+      "tapi-eth":"eth",
       "tapi-oam":"oam",
       "tapi-odu":"odu",
       "tapi-och":"och"
