OAS modules (experimental)

--- a/OAS/tapi-notification@2020-04-23.yaml
+++ b/OAS/tapi-notification@2020-04-23.yaml
@@ -2142,6 +2142,7 @@ definitions:
     - "HOLDER"
     - "PHYSICAL_SPAN"
     - "ABSTRACT_STRAND"
+    - "DEVICE"
   tapi.notification.PerceivedSeverityType:
     type: "string"
     enum:
