--- a/OAS/tapi-virtual-network@2020-04-23.yaml
+++ b/OAS/tapi-virtual-network@2020-04-23.yaml
@@ -5,16 +5,17 @@ info:
     \n        Source: TapiTopology.uml\r\n        - The TAPI YANG models included\
     \ in this TAPI release are a *normative* part of the TAPI SDK.\r\n        - The\
     \ YANG specifications have been generated from the corresponding UML model using\
-    \ the [ONF EAGLE UML2YANG mapping tool]\r\n          <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
-    \n          and further edited manually to comply with the [ONF IISOMI UML2YANG\
-    \ mapping guidelines]\r\n          <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
-    \n        - Status of YANG model artifacts can be determined by referring to the\
-    \ corresponding UML artifacts.\r\n          As described in the UML models, some\
-    \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
-    \n        - The ONF TAPI release process does not guarantee backward compatibility\
-    \ of YANG models across major versions of TAPI releases.\r\n          The YANG\
-    \ model backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
-    \n          YANG models included in this release may not be backward compatible\
+    \ the [ONF EAGLE UML2YANG mapping tool]\r\n          <https://urldefense.com/v3/__https://github.com/OpenNetworkingFoundation/EagleUmlYang__;!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_6pxiNxl$\
+    \ >\r\n          and further edited manually to comply with the [ONF IISOMI UML2YANG\
+    \ mapping guidelines]\r\n          <https://urldefense.com/v3/__https://wiki.opennetworking.org/display/OIMT/UML*-*YANG*Guidelines__;Kysr!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_wxKUbJ_$\
+    \ >\r\n        - Status of YANG model artifacts can be determined by referring\
+    \ to the corresponding UML artifacts.\r\n          As described in the UML models,\
+    \ some artifacts are considered *experimental*, and thus the corresponding YANG\
+    \ artifacts.\r\n        - The ONF TAPI release process does not guarantee backward\
+    \ compatibility of YANG models across major versions of TAPI releases.\r\n   \
+    \       The YANG model backward compatibility criteria are outlined in section\
+    \ 11 of <https://urldefense.com/v3/__https://tools.ietf.org/html/rfc7950__;!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_zcAY1P4$\
+    \ >.\r\n          YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases.\r\n        Copyright (c) 2018 Open Networking Foundation\
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
     \ the Apache License 2.0.,\r\n        This module contains TAPI Notification Model\
@@ -5631,6 +5632,89 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
+  /data/context/virtual-network-context/virtual-nw-service={uuid}/schedule/:
+    get:
+      tags:
+      - "tapi-virtual-network"
+      summary: "returns tapi.common.TimeRange"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of virtual-nw-service"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimeRange"
+          schema:
+            $ref: "#/definitions/tapi.common.TimeRange"
+        400:
+          description: "Internal error"
+    post:
+      tags:
+      - "tapi-virtual-network"
+      summary: "creates tapi.common.TimeRange"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of virtual-nw-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.TimeRange.body-param"
+        description: "tapi.common.TimeRange to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TimeRange"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-virtual-network"
+      summary: "creates or updates tapi.common.TimeRange"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of virtual-nw-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.TimeRange.body-param"
+        description: "tapi.common.TimeRange to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TimeRange"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-virtual-network"
+      summary: "removes tapi.common.TimeRange"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of virtual-nw-service"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/context/virtual-network-context/virtual-nw-service={uuid}/state/:
     get:
       tags:
@@ -7665,6 +7749,15 @@ definitions:
     - "TERMINATED_BIDIRECTIONAL"
     - "LT_PERMENANTLY_TERMINATED"
     - "TERMINATION_STATE_UNKNOWN"
+  tapi.common.TimeRange:
+    type: "object"
+    properties:
+      end-time:
+        type: "string"
+        description: "none"
+      start-time:
+        type: "string"
+        description: "none"
   tapi.common.getserviceinterfacepointdetails.Input:
     type: "object"
     properties:
@@ -7914,6 +8007,7 @@ definitions:
     - "HOLDER"
     - "PHYSICAL_SPAN"
     - "ABSTRACT_STRAND"
+    - "DEVICE"
   tapi.notification.PerceivedSeverityType:
     type: "string"
     enum:
@@ -8897,8 +8991,8 @@ definitions:
     - type: "object"
       properties:
         schedule:
-          type: "string"
           description: "none"
+          $ref: "#/definitions/tapi.common.TimeRange"
         end-point:
           type: "array"
           description: "none"
@@ -8965,8 +9059,8 @@ definitions:
     type: "object"
     properties:
       conn-schedule:
-        type: "string"
         description: "none"
+        $ref: "#/definitions/tapi.common.TimeRange"
       vnw-constraint:
         description: "none"
         $ref: "#/definitions/tapi.virtual.network.VirtualNetworkConstraint"
