--- a/OAS/tapi-dsr@2020-04-23.yaml
+++ b/OAS/tapi-dsr@2020-04-23.yaml
@@ -5,16 +5,17 @@ info:
     \n        Source: TapiConnectivity.uml\r\n        - The TAPI YANG models included\
     \ in this TAPI release are a *normative* part of the TAPI SDK.\r\n        - The\
     \ YANG specifications have been generated from the corresponding UML model using\
-    \ the [ONF EAGLE UML2YANG mapping tool]\r\n        <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
-    \n        and further edited manually to comply with the [ONF IISOMI UML2YANG\
-    \ mapping guidelines]\r\n        <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
-    \n        - Status of YANG model artifacts can be determined by referring to the\
-    \ corresponding UML artifacts.\r\n        As described in the UML models, some\
-    \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
-    \n        - The ONF TAPI release process does not guarantee backward compatibility\
-    \ of YANG models across major versions of TAPI releases.\r\n        The YANG model\
-    \ backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
-    \n        YANG models included in this release may not be backward compatible\
+    \ the [ONF EAGLE UML2YANG mapping tool]\r\n        <https://urldefense.com/v3/__https://github.com/OpenNetworkingFoundation/EagleUmlYang__;!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_6pxiNxl$\
+    \ >\r\n        and further edited manually to comply with the [ONF IISOMI UML2YANG\
+    \ mapping guidelines]\r\n        <https://urldefense.com/v3/__https://wiki.opennetworking.org/display/OIMT/UML*-*YANG*Guidelines__;Kysr!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_wxKUbJ_$\
+    \ >\r\n        - Status of YANG model artifacts can be determined by referring\
+    \ to the corresponding UML artifacts.\r\n        As described in the UML models,\
+    \ some artifacts are considered *experimental*, and thus the corresponding YANG\
+    \ artifacts.\r\n        - The ONF TAPI release process does not guarantee backward\
+    \ compatibility of YANG models across major versions of TAPI releases.\r\n   \
+    \     The YANG model backward compatibility criteria are outlined in section 11\
+    \ of <https://urldefense.com/v3/__https://tools.ietf.org/html/rfc7950__;!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_zcAY1P4$\
+    \ >.\r\n        YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases.\r\n        Copyright (c) 2018 Open Networking Foundation\
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
     \ the Apache License 2.0.,\r\n        This module contains TAPI OAM Model definitions.\r\
@@ -38,16 +39,17 @@ info:
     \ definitions.\r\n        Source: TapiTopology.uml\r\n        - The TAPI YANG\
     \ models included in this TAPI release are a *normative* part of the TAPI SDK.\r\
     \n        - The YANG specifications have been generated from the corresponding\
-    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n          <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
-    \n          and further edited manually to comply with the [ONF IISOMI UML2YANG\
-    \ mapping guidelines]\r\n          <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
-    \n        - Status of YANG model artifacts can be determined by referring to the\
-    \ corresponding UML artifacts.\r\n          As described in the UML models, some\
-    \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
-    \n        - The ONF TAPI release process does not guarantee backward compatibility\
-    \ of YANG models across major versions of TAPI releases.\r\n          The YANG\
-    \ model backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
-    \n          YANG models included in this release may not be backward compatible\
+    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n          <https://urldefense.com/v3/__https://github.com/OpenNetworkingFoundation/EagleUmlYang__;!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_6pxiNxl$\
+    \ >\r\n          and further edited manually to comply with the [ONF IISOMI UML2YANG\
+    \ mapping guidelines]\r\n          <https://urldefense.com/v3/__https://wiki.opennetworking.org/display/OIMT/UML*-*YANG*Guidelines__;Kysr!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_wxKUbJ_$\
+    \ >\r\n        - Status of YANG model artifacts can be determined by referring\
+    \ to the corresponding UML artifacts.\r\n          As described in the UML models,\
+    \ some artifacts are considered *experimental*, and thus the corresponding YANG\
+    \ artifacts.\r\n        - The ONF TAPI release process does not guarantee backward\
+    \ compatibility of YANG models across major versions of TAPI releases.\r\n   \
+    \       The YANG model backward compatibility criteria are outlined in section\
+    \ 11 of <https://urldefense.com/v3/__https://tools.ietf.org/html/rfc7950__;!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_zcAY1P4$\
+    \ >.\r\n          YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases.\r\n        Copyright (c) 2018 Open Networking Foundation\
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
     \ the Apache License 2.0.,\r\n        This module contains TAPI Notification Model\
@@ -16170,8 +16172,8 @@ definitions:
           format: "int32"
           description: "Value of 0 (zero) means 'unspecified priority'.\r\n      \
             \          Highest priority is 1, sometimes referred as 'preferred' or\
-            \ 'main' or 'intended' route.\r\n                Then 2 has lower priory\
-            \ than 1, 3 has lower priory than 2, etc."
+            \ 'main' or 'intended' route.\r\n                2 has lower priority\
+            \ than 1, 3 has lower priority than 2, etc."
         route-state:
           type: "string"
           description: "Current information on the route selection."
@@ -16196,10 +16198,10 @@ definitions:
         resilience-route-pac:
           description: "Provides optional resilience and state attributes to the Route."
           $ref: "#/definitions/tapi.connectivity.ResilienceRoute"
-      description: "The FC Route (FcRoute) object class models the individual routes\
-        \ of an FC. \r\n            The route of an FC object is represented by a\
-        \ list of FCs at a lower level. \r\n            Note that depending on the\
-        \ service supported by an FC, an the FC can have multiple routes."
+      description: "The Route of a Connection is modeled as a collection of Connection\
+        \ End Points.\r\n            The logical order of the Connection End Points\
+        \ within the Route object can be inferred by the TAPI client by the knowledge\
+        \ of the Topology information."
   tapi.connectivity.RouteRef:
     allOf:
     - $ref: "#/definitions/tapi.connectivity.ConnectionRef"
@@ -16674,6 +16676,7 @@ definitions:
     - "HOLDER"
     - "PHYSICAL_SPAN"
     - "ABSTRACT_STRAND"
+    - "DEVICE"
   tapi.notification.PerceivedSeverityType:
     type: "string"
     enum:
