--- a/OAS/tapi-topology@2020-04-23.yaml
+++ b/OAS/tapi-topology@2020-04-23.yaml
@@ -5,16 +5,17 @@ info:
     \n        Source: TapiTopology.uml\r\n        - The TAPI YANG models included\
     \ in this TAPI release are a *normative* part of the TAPI SDK.\r\n        - The\
     \ YANG specifications have been generated from the corresponding UML model using\
-    \ the [ONF EAGLE UML2YANG mapping tool]\r\n          <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
-    \n          and further edited manually to comply with the [ONF IISOMI UML2YANG\
-    \ mapping guidelines]\r\n          <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
-    \n        - Status of YANG model artifacts can be determined by referring to the\
-    \ corresponding UML artifacts.\r\n          As described in the UML models, some\
-    \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
-    \n        - The ONF TAPI release process does not guarantee backward compatibility\
-    \ of YANG models across major versions of TAPI releases.\r\n          The YANG\
-    \ model backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
-    \n          YANG models included in this release may not be backward compatible\
+    \ the [ONF EAGLE UML2YANG mapping tool]\r\n          <https://urldefense.com/v3/__https://github.com/OpenNetworkingFoundation/EagleUmlYang__;!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_6pxiNxl$\
+    \ >\r\n          and further edited manually to comply with the [ONF IISOMI UML2YANG\
+    \ mapping guidelines]\r\n          <https://urldefense.com/v3/__https://wiki.opennetworking.org/display/OIMT/UML*-*YANG*Guidelines__;Kysr!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_wxKUbJ_$\
+    \ >\r\n        - Status of YANG model artifacts can be determined by referring\
+    \ to the corresponding UML artifacts.\r\n          As described in the UML models,\
+    \ some artifacts are considered *experimental*, and thus the corresponding YANG\
+    \ artifacts.\r\n        - The ONF TAPI release process does not guarantee backward\
+    \ compatibility of YANG models across major versions of TAPI releases.\r\n   \
+    \       The YANG model backward compatibility criteria are outlined in section\
+    \ 11 of <https://urldefense.com/v3/__https://tools.ietf.org/html/rfc7950__;!!OSsGDw!bx-l35NqfQHpJ8R_DmXfi2NX2ll5dMl9VbK5aS_m3ZShiVoz74Ur_zcAY1P4$\
+    \ >.\r\n          YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases.\r\n        Copyright (c) 2018 Open Networking Foundation\
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
     \ the Apache License 2.0.,\r\n        This module contains TAPI Notification Model\
@@ -5934,6 +5935,7 @@ definitions:
     - "HOLDER"
     - "PHYSICAL_SPAN"
     - "ABSTRACT_STRAND"
+    - "DEVICE"
   tapi.notification.PerceivedSeverityType:
     type: "string"
     enum:
