--- a/OAS/tapi-common@2020-04-23.yaml
+++ b/OAS/tapi-common@2020-04-23.yaml
@@ -18,7 +18,7 @@ info:
     \ with previous TAPI releases.\r\n        Copyright (c) 2018 Open Networking Foundation\
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
     \ the Apache License 2.0."
-  version: "2.2.0"
+  version: "2.1.3"
   title: "tapi-common API"
 host: "localhost:1234"
 consumes:
@@ -26,7 +26,7 @@ consumes:
 produces:
 - "application/yang-data+json"
 paths:
-  /data/context/:
+  /data/tapi-common:context/:
     get:
       tags:
       - "tapi-common"
@@ -37,7 +37,7 @@ paths:
         200:
           description: "tapi.common.TapiContext"
           schema:
-            $ref: "#/definitions/tapi.common.TapiContext"
+            $ref: "#/definitions/tapi.common.TapiContextWrapper"
         400:
           description: "Internal error"
     post:
@@ -51,7 +51,7 @@ paths:
         description: "tapi.common.TapiContext to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.TapiContext"
+          $ref: "#/definitions/tapi.common.TapiContextWrapper"
       responses:
         201:
           description: "Object created"
@@ -70,7 +70,7 @@ paths:
         description: "tapi.common.TapiContext to be added or updated"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.TapiContext"
+          $ref: "#/definitions/tapi.common.TapiContextWrapper"
       responses:
         201:
           description: "Object created"
@@ -89,7 +89,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/context/name/:
+  /data/tapi-common:context/name/:
     post:
       tags:
       - "tapi-common"
@@ -103,7 +103,7 @@ paths:
         description: "tapi.common.NameAndValue to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
       responses:
         201:
           description: "Object created"
@@ -111,7 +111,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/context/name={value-name}/:
+  /data/tapi-common:context/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -129,7 +129,7 @@ paths:
         200:
           description: "tapi.common.NameAndValue"
           schema:
-            $ref: "#/definitions/tapi.common.NameAndValue"
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
     put:
@@ -150,7 +150,7 @@ paths:
         description: "tapi.common.NameAndValue to be added or updated"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
       responses:
         201:
           description: "Object created"
@@ -176,7 +176,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/context/service-interface-point/:
+  /data/tapi-common:context/service-interface-point/:
     post:
       tags:
       - "tapi-common"
@@ -188,7 +188,7 @@ paths:
         description: "tapi.common.ServiceInterfacePoint to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+          $ref: "#/definitions/tapi.common.ServiceInterfacePointWrapper"
       responses:
         201:
           description: "Object created"
@@ -196,7 +196,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/context/service-interface-point={uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}/:
     get:
       tags:
       - "tapi-common"
@@ -212,7 +212,7 @@ paths:
         200:
           description: "tapi.common.ServiceInterfacePoint"
           schema:
-            $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+            $ref: "#/definitions/tapi.common.ServiceInterfacePointWrapper"
         400:
           description: "Internal error"
     put:
@@ -231,7 +231,7 @@ paths:
         description: "tapi.common.ServiceInterfacePoint to be added or updated"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+          $ref: "#/definitions/tapi.common.ServiceInterfacePointWrapper"
       responses:
         201:
           description: "Object created"
@@ -255,7 +255,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/context/service-interface-point={uuid}/available-capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/:
     get:
       tags:
       - "tapi-common"
@@ -271,10 +271,10 @@ paths:
         200:
           description: "tapi.common.Capacity"
           schema:
-            $ref: "#/definitions/tapi.common.Capacity"
+            $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/available-capacity/bandwidth-profile/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/bandwidth-profile/:
     get:
       tags:
       - "tapi-common"
@@ -290,10 +290,10 @@ paths:
         200:
           description: "tapi.common.BandwidthProfile"
           schema:
-            $ref: "#/definitions/tapi.common.BandwidthProfile"
+            $ref: "#/definitions/tapi.common.BandwidthProfileWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/available-capacity/bandwidth-profile/committed-burst-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/bandwidth-profile/committed-burst-size/:
     get:
       tags:
       - "tapi-common"
@@ -309,10 +309,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/available-capacity/bandwidth-profile/committed-information-rate/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/bandwidth-profile/committed-information-rate/:
     get:
       tags:
       - "tapi-common"
@@ -328,10 +328,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/available-capacity/bandwidth-profile/peak-burst-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/bandwidth-profile/peak-burst-size/:
     get:
       tags:
       - "tapi-common"
@@ -347,10 +347,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/available-capacity/bandwidth-profile/peak-information-rate/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/bandwidth-profile/peak-information-rate/:
     get:
       tags:
       - "tapi-common"
@@ -366,10 +366,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/available-capacity/total-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
@@ -386,10 +386,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/name/:
+  /data/tapi-common:context/service-interface-point={uuid}/name/:
     post:
       tags:
       - "tapi-common"
@@ -408,7 +408,7 @@ paths:
         description: "tapi.common.NameAndValue to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
       responses:
         201:
           description: "Object created"
@@ -416,7 +416,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/context/service-interface-point={uuid}/name={value-name}/:
+  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -439,7 +439,7 @@ paths:
         200:
           description: "tapi.common.NameAndValue"
           schema:
-            $ref: "#/definitions/tapi.common.NameAndValue"
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
     put:
@@ -465,7 +465,7 @@ paths:
         description: "tapi.common.NameAndValue to be added or updated"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
       responses:
         201:
           description: "Object created"
@@ -496,7 +496,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/context/service-interface-point={uuid}/total-potential-capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/:
     get:
       tags:
       - "tapi-common"
@@ -513,10 +513,10 @@ paths:
         200:
           description: "tapi.common.Capacity"
           schema:
-            $ref: "#/definitions/tapi.common.Capacity"
+            $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/:
     get:
       tags:
       - "tapi-common"
@@ -532,10 +532,10 @@ paths:
         200:
           description: "tapi.common.BandwidthProfile"
           schema:
-            $ref: "#/definitions/tapi.common.BandwidthProfile"
+            $ref: "#/definitions/tapi.common.BandwidthProfileWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/committed-burst-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/committed-burst-size/:
     get:
       tags:
       - "tapi-common"
@@ -551,10 +551,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/committed-information-rate/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/committed-information-rate/:
     get:
       tags:
       - "tapi-common"
@@ -570,10 +570,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/peak-burst-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/peak-burst-size/:
     get:
       tags:
       - "tapi-common"
@@ -589,10 +589,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/peak-information-rate/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/bandwidth-profile/peak-information-rate/:
     get:
       tags:
       - "tapi-common"
@@ -608,10 +608,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/total-potential-capacity/total-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
@@ -628,10 +628,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /operations/get-service-interface-point-details/:
+  /operations/tapi-common:get-service-interface-point-details/:
     post:
       tags:
       - "tapi-common"
@@ -654,7 +654,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/get-service-interface-point-list/:
+  /operations/tapi-common:get-service-interface-point-list/:
     post:
       tags:
       - "tapi-common"
@@ -668,7 +668,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/update-service-interface-point/:
+  /operations/tapi-common:update-service-interface-point/:
     post:
       tags:
       - "tapi-common"
@@ -738,6 +738,10 @@ definitions:
     - "RFC_2697"
     - "RFC_2698"
     - "RFC_4115"
+  tapi.common.BandwidthProfileWrapper:
+    properties:
+      bandwidth-profile:
+        $ref: "#/definitions/tapi.common.BandwidthProfile"
   tapi.common.Capacity:
     type: "object"
     properties:
@@ -781,6 +785,14 @@ definitions:
       unit:
         description: "none"
         $ref: "#/definitions/tapi.common.CapacityUnit"
+  tapi.common.CapacityValueWrapper:
+    properties:
+      committed-burst-size:
+        $ref: "#/definitions/tapi.common.CapacityValue"
+  tapi.common.CapacityWrapper:
+    properties:
+      available-capacity:
+        $ref: "#/definitions/tapi.common.Capacity"
   tapi.common.GetServiceInterfacePointDetails:
     type: "object"
     properties:
@@ -835,6 +847,10 @@ definitions:
       value:
         type: "string"
         description: "The value"
+  tapi.common.NameAndValueWrapper:
+    properties:
+      name:
+        $ref: "#/definitions/tapi.common.NameAndValue"
   tapi.common.OperationalState:
     type: "string"
     enum:
@@ -871,6 +887,10 @@ definitions:
         \ termination and adaptation functions of one or more transport layers. \r\
         \n            The structure of LTP supports all transport protocols including\
         \ circuit and packet forms."
+  tapi.common.ServiceInterfacePointWrapper:
+    properties:
+      service-interface-point:
+        $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
   tapi.common.TapiContext:
     allOf:
     - $ref: "#/definitions/tapi.common.GlobalClass"
@@ -885,6 +905,10 @@ definitions:
         \ of control that a particular SDN controller has with respect to a particular\
         \ network, (i.e., encompassing a designated set of interconnected (virtual)\
         \ network elements)."
+  tapi.common.TapiContextWrapper:
+    properties:
+      tapi-common:context:
+        $ref: "#/definitions/tapi.common.TapiContext"
   tapi.common.getserviceinterfacepointdetails.Input:
     type: "object"
     properties:
