Several minor updates/corrections for correct yang/tree generation.
All YANG/TREE/YAML modules committed.

--- a/OAS/tapi-common@2019-03-31.yaml
+++ b/OAS/tapi-common@2019-03-31.yaml
@@ -18,7 +18,7 @@ info:
     \ backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
     \n        YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases."
-  version: "2.2.0"
+  version: "2.1.3"
   title: "tapi-common API"
 host: "localhost:1234"
 consumes:
@@ -26,7 +26,7 @@ consumes:
 produces:
 - "application/yang-data+json"
 paths:
-  /data/context/:
+  /data/tapi-common:context/:
     get:
       tags:
       - "tapi-common"
@@ -37,7 +37,7 @@ paths:
         200:
           description: "tapi.common.TapiContext"
           schema:
-            $ref: "#/definitions/tapi.common.TapiContext"
+            $ref: "#/definitions/tapi.common.TapiContextWrapper"
         400:
           description: "Internal error"
     post:
@@ -51,7 +51,7 @@ paths:
         description: "tapi.common.TapiContext to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.TapiContext"
+          $ref: "#/definitions/tapi.common.TapiContextWrapper"
       responses:
         201:
           description: "Object created"
@@ -70,7 +70,7 @@ paths:
         description: "tapi.common.TapiContext to be added or updated"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.TapiContext"
+          $ref: "#/definitions/tapi.common.TapiContextWrapper"
       responses:
         201:
           description: "Object created"
@@ -89,7 +89,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/context/name/:
+  /data/tapi-common:context/name/:
     post:
       tags:
       - "tapi-common"
@@ -103,7 +103,7 @@ paths:
         description: "tapi.common.NameAndValue to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
       responses:
         201:
           description: "Object created"
@@ -111,7 +111,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/context/name={value-name}/:
+  /data/tapi-common:context/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -129,7 +129,7 @@ paths:
         200:
           description: "tapi.common.NameAndValue"
           schema:
-            $ref: "#/definitions/tapi.common.NameAndValue"
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
     put:
@@ -150,7 +150,7 @@ paths:
         description: "tapi.common.NameAndValue to be added or updated"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
       responses:
         201:
           description: "Object created"
@@ -176,7 +176,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/context/service-interface-point/:
+  /data/tapi-common:context/service-interface-point/:
     post:
       tags:
       - "tapi-common"
@@ -188,7 +188,7 @@ paths:
         description: "tapi.common.ServiceInterfacePoint to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+          $ref: "#/definitions/tapi.common.ServiceInterfacePointWrapper"
       responses:
         201:
           description: "Object created"
@@ -196,7 +196,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/context/service-interface-point={uuid}/:
+  /data/tapi-common:context/service-interface-point={uuid}/:
     get:
       tags:
       - "tapi-common"
@@ -212,7 +212,7 @@ paths:
         200:
           description: "tapi.common.ServiceInterfacePoint"
           schema:
-            $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+            $ref: "#/definitions/tapi.common.ServiceInterfacePointWrapper"
         400:
           description: "Internal error"
     put:
@@ -231,7 +231,7 @@ paths:
         description: "tapi.common.ServiceInterfacePoint to be added or updated"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+          $ref: "#/definitions/tapi.common.ServiceInterfacePointWrapper"
       responses:
         201:
           description: "Object created"
@@ -255,7 +255,7 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/context/service-interface-point={uuid}/available-capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/:
     get:
       tags:
       - "tapi-common"
@@ -271,16 +271,16 @@ paths:
         200:
           description: "tapi.common.Capacity"
           schema:
-            $ref: "#/definitions/tapi.common.Capacity"
+            $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/available-capacity/total-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/available-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
       summary: "returns tapi.common.CapacityValue"
-      description: "Total capacity of the TopologicalEntity in MB/s. In case of bandwidthProfile,\
-        \ this is expected to same as the committedInformationRate."
+      description: "Total capacity of the entity. In case of bandwidthProfile, this\
+        \ is expected to same as the committedInformationRate."
       parameters:
       - name: "uuid"
         in: "path"
@@ -291,10 +291,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/name/:
+  /data/tapi-common:context/service-interface-point={uuid}/name/:
     post:
       tags:
       - "tapi-common"
@@ -313,7 +313,7 @@ paths:
         description: "tapi.common.NameAndValue to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
       responses:
         201:
           description: "Object created"
@@ -321,7 +321,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  /data/context/service-interface-point={uuid}/name={value-name}/:
+  /data/tapi-common:context/service-interface-point={uuid}/name={value-name}/:
     get:
       tags:
       - "tapi-common"
@@ -344,7 +344,7 @@ paths:
         200:
           description: "tapi.common.NameAndValue"
           schema:
-            $ref: "#/definitions/tapi.common.NameAndValue"
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
     put:
@@ -370,7 +370,7 @@ paths:
         description: "tapi.common.NameAndValue to be added or updated"
         required: false
         schema:
-          $ref: "#/definitions/tapi.common.NameAndValue"
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
       responses:
         201:
           description: "Object created"
@@ -401,13 +401,13 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/context/service-interface-point={uuid}/total-potential-capacity/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/:
     get:
       tags:
       - "tapi-common"
       summary: "returns tapi.common.Capacity"
-      description: "An optimistic view of the capacity of the TopologicalEntity assuming\
-        \ that any shared capacity is available to be taken."
+      description: "An optimistic view of the capacity of the entity assuming that\
+        \ any shared capacity is available to be taken."
       parameters:
       - name: "uuid"
         in: "path"
@@ -418,16 +418,16 @@ paths:
         200:
           description: "tapi.common.Capacity"
           schema:
-            $ref: "#/definitions/tapi.common.Capacity"
+            $ref: "#/definitions/tapi.common.CapacityWrapper"
         400:
           description: "Internal error"
-  /data/context/service-interface-point={uuid}/total-potential-capacity/total-size/:
+  /data/tapi-common:context/service-interface-point={uuid}/total-potential-capacity/total-size/:
     get:
       tags:
       - "tapi-common"
       summary: "returns tapi.common.CapacityValue"
-      description: "Total capacity of the TopologicalEntity in MB/s. In case of bandwidthProfile,\
-        \ this is expected to same as the committedInformationRate."
+      description: "Total capacity of the entity. In case of bandwidthProfile, this\
+        \ is expected to same as the committedInformationRate."
       parameters:
       - name: "uuid"
         in: "path"
@@ -438,10 +438,10 @@ paths:
         200:
           description: "tapi.common.CapacityValue"
           schema:
-            $ref: "#/definitions/tapi.common.CapacityValue"
+            $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
-  /operations/get-service-interface-point-details/:
+  /operations/tapi-common:get-service-interface-point-details/:
     post:
       tags:
       - "tapi-common"
@@ -464,7 +464,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/get-service-interface-point-list/:
+  /operations/tapi-common:get-service-interface-point-list/:
     post:
       tags:
       - "tapi-common"
@@ -478,7 +478,7 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
-  /operations/update-service-interface-point/:
+  /operations/tapi-common:update-service-interface-point/:
     post:
       tags:
       - "tapi-common"
@@ -502,13 +502,19 @@ definitions:
     type: "object"
     properties:
       operational-state:
-        description: "none"
+        description: "The operational state gives the information about the real capability\
+          \ of a resource to provide or not provide service."
         $ref: "#/definitions/tapi.common.OperationalState"
       lifecycle-state:
-        description: "none"
+        description: "Used to track the planned deployment, allocation to clients\
+          \ and withdrawal of resources."
         $ref: "#/definitions/tapi.common.LifecycleState"
       administrative-state:
-        description: "none"
+        description: "The administration of managed objects operates independently\
+          \ of the operability and usage of managed objects and is described by the\
+          \ administrative state attribute. The administrative state is used by the\
+          \ operator to make a resource available for service, or to remove a resource\
+          \ from service."
         $ref: "#/definitions/tapi.common.AdministrativeState"
   tapi.common.AdministrativeState:
     type: "string"
@@ -519,8 +525,8 @@ definitions:
     type: "object"
     properties:
       total-size:
-        description: "Total capacity of the TopologicalEntity in MB/s. In case of\
-          \ bandwidthProfile, this is expected to same as the committedInformationRate."
+        description: "Total capacity of the entity. In case of bandwidthProfile, this\
+          \ is expected to same as the committedInformationRate."
         $ref: "#/definitions/tapi.common.CapacityValue"
   tapi.common.CapacityPac:
     type: "object"
@@ -529,8 +535,8 @@ definitions:
         description: "Capacity available to be assigned."
         $ref: "#/definitions/tapi.common.Capacity"
       total-potential-capacity:
-        description: "An optimistic view of the capacity of the TopologicalEntity\
-          \ assuming that any shared capacity is available to be taken."
+        description: "An optimistic view of the capacity of the entity assuming that\
+          \ any shared capacity is available to be taken."
         $ref: "#/definitions/tapi.common.Capacity"
   tapi.common.CapacityUnit:
     type: "string"
@@ -555,6 +561,14 @@ definitions:
       unit:
         description: "none"
         $ref: "#/definitions/tapi.common.CapacityUnit"
+  tapi.common.CapacityValueWrapper:
+    properties:
+      total-size:
+        $ref: "#/definitions/tapi.common.CapacityValue"
+  tapi.common.CapacityWrapper:
+    properties:
+      available-capacity:
+        $ref: "#/definitions/tapi.common.Capacity"
   tapi.common.GetServiceInterfacePointDetails:
     type: "object"
     properties:
@@ -609,11 +623,22 @@ definitions:
       value:
         type: "string"
         description: "The value"
+  tapi.common.NameAndValueWrapper:
+    properties:
+      name:
+        $ref: "#/definitions/tapi.common.NameAndValue"
   tapi.common.OperationalState:
     type: "string"
     enum:
     - "DISABLED"
     - "ENABLED"
+  tapi.common.PortDirection:
+    type: "string"
+    enum:
+    - "BIDIRECTIONAL"
+    - "INPUT"
+    - "OUTPUT"
+    - "UNIDENTIFIED_OR_UNKNOWN"
   tapi.common.ServiceInterfacePoint:
     allOf:
     - $ref: "#/definitions/tapi.common.AdminStatePac"
@@ -623,17 +648,27 @@ definitions:
       properties:
         supported-layer-protocol-qualifier:
           type: "array"
-          description: "none"
+          description: "The supported sub-layer(s) or rate(s) of Layer Protocol."
           items:
             type: "string"
         layer-protocol-name:
           description: "Usage of layerProtocolName [>1]  in the ServiceInterfacePoint\
             \ should be considered experimental"
           $ref: "#/definitions/tapi.common.LayerProtocolName"
-      description: "The LogicalTerminationPoint (LTP) object class encapsulates the\
-        \ termination and adaptation functions of one or more transport layers. \r\
-        \n            The structure of LTP supports all transport protocols including\
-        \ circuit and packet forms."
+        direction:
+          description: "If direction attribute is missing the SIP instance is to be\
+            \ intended as 'BIDIRECTIONAL'"
+          $ref: "#/definitions/tapi.common.PortDirection"
+      description: "A Service Interface Point represents the network-interface-facing\
+        \ aspects of the edge-port functions that access the forwarding capabilities\
+        \ provided by the Node. Hence it provides a limited, simplified view of interest\
+        \ to external clients (e.g. shared addressing, capacity, resource availability,\
+        \ etc.), that enable the clients to request connectivity without the need\
+        \ to understand the provider network internals."
+  tapi.common.ServiceInterfacePointWrapper:
+    properties:
+      service-interface-point:
+        $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
   tapi.common.TapiContext:
     allOf:
     - $ref: "#/definitions/tapi.common.GlobalClass"
@@ -644,10 +679,14 @@ definitions:
           description: "none"
           items:
             $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
-      description: "The Network Control Domain (NCD) object class represents the scope\
-        \ of control that a particular SDN controller has with respect to a particular\
-        \ network, (i.e., encompassing a designated set of interconnected (virtual)\
-        \ network elements)."
+      description: "This object class represents the scope of control that a particular\
+        \ SDN controller has with re-spect to a particular network, (i.e., encompassing\
+        \ a designated set of interconnected (virtual) network elements).\r\n    \
+        \        This class includes the list of Service Interface Points."
+  tapi.common.TapiContextWrapper:
+    properties:
+      tapi-common:context:
+        $ref: "#/definitions/tapi.common.TapiContext"
   tapi.common.getserviceinterfacepointdetails.Input:
     type: "object"
     properties:
