YANG and OAS Modules
Some adjustments to TapiOam/Odu/PhotonicMedia

--- a/OAS/tapi-dsr@2019-03-31.yaml
+++ b/OAS/tapi-dsr@2019-03-31.yaml
@@ -8652,6 +8652,109 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
+  /data/tapi-common:context/tapi-oam:oam-context/oam-service={uuid}/oam-service-point={local-id}/connection-end-point/:
+    get:
+      tags:
+      - "tapi-oam"
+      summary: "returns tapi.connectivity.ConnectionEndPointRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of oam-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of oam-service-point"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.connectivity.ConnectionEndPointRef"
+          schema:
+            $ref: "#/definitions/tapi.connectivity.ConnectionEndPointRefWrapper"
+        400:
+          description: "Internal error"
+    post:
+      tags:
+      - "tapi-oam"
+      summary: "creates tapi.connectivity.ConnectionEndPointRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of oam-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of oam-service-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.connectivity.ConnectionEndPointRef.body-param"
+        description: "tapi.connectivity.ConnectionEndPointRef to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.connectivity.ConnectionEndPointRefWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-oam"
+      summary: "creates or updates tapi.connectivity.ConnectionEndPointRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of oam-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of oam-service-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.connectivity.ConnectionEndPointRef.body-param"
+        description: "tapi.connectivity.ConnectionEndPointRef to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.connectivity.ConnectionEndPointRefWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-oam"
+      summary: "removes tapi.connectivity.ConnectionEndPointRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of oam-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of oam-service-point"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/tapi-common:context/tapi-oam:oam-context/oam-service={uuid}/oam-service-point={local-id}/connectivity-service-end-point/:
     get:
       tags:
@@ -16941,6 +17044,9 @@ definitions:
         mep:
           description: "none"
           $ref: "#/definitions/tapi.oam.MepRef"
+        connection-end-point:
+          description: "none"
+          $ref: "#/definitions/tapi.connectivity.ConnectionEndPointRef"
       description: "none"
   tapi.oam.OamServicePointRef:
     allOf:
